[package]
name    = "decondenser-core"
version = "0.1.0"

# We may consider publishing this crate if people want to use it as a library.
# So if you (yes you!, the one reading this comment), want to use this crate as
# a library, consider opening an issue asking to publish this crate on
# crates.io. We'll consider doing it only if you express an interest in it.
# Otherwise the API of this crate should not be considered stable/or public
# until it's officially published on crates.io.
publish = false

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
# This kid is independent 😎
